feat(swagger): 修正API类型
