# docs/swagger.json
@@ -97,21 +97,12 @@
                 "summary": "用户登录",
                 "parameters": [
                     {
-                        "description": "用户名",
-                        "name": "name",
+                        "description": "用户登录信息",
+                        "name": "loginRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "用户密码",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/route.UserLoginReq"
                         }
                     }
                 ],
@@ -155,21 +146,12 @@
                 "summary": "用户注册",
                 "parameters": [
                     {
-                        "description": "用户名",
-                        "name": "name",
+                        "description": "用户注册信息",
+                        "name": "registerRequest",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "用户密码",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/route.UserLogupReq"
                         }
                     }
                 ],
@@ -363,6 +345,28 @@
                 },
                 "duration": {
                     "type": "integer"
+                }
+            }
+        },
+        "route.UserLoginReq": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "route.UserLogupReq": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         }
